[gd_scene load_steps=5 format=3 uid="uid://p5rcch5nsaa1"]

[ext_resource type="Script" uid="uid://67yljjf2c3kw" path="res://ui/inventory/InventorySlot.gd" id="1_nktrt"]
[ext_resource type="Texture2D" uid="uid://d3mssnlxkq31n" path="res://assets/Ui/Theme/Theme Wood/inventory_cell.png" id="2_jffjn"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_22ksf"]
texture = ExtResource("2_jffjn")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 3.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jffjn"]
texture = ExtResource("2_jffjn")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 3.0

[node name="InventorySlot" type="Button"]
clip_contents = true
custom_minimum_size = Vector2(40, 40)
offset_right = 40.0
offset_bottom = 40.0
focus_mode = 1
theme_override_styles/hover = SubResource("StyleBoxTexture_22ksf")
theme_override_styles/normal = SubResource("StyleBoxTexture_jffjn")
script = ExtResource("1_nktrt")

[node name="ItemIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="QuantityLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -4.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 1
theme_override_font_sizes/font_size = 14
text = "99"
horizontal_alignment = 2
vertical_alignment = 2
